cmake_minimum_required(VERSION 3.15)
project(SolidityCheck)

set(CMAKE_CXX_STANDARD 11)

add_executable(SolidityCheck main.cpp AddressFixed.cpp AddressFixed.h AllGas.h AllGas.cpp ArrangeCode.h ArrangeCode.cpp BalanceEquality.h BalanceEquality.cpp ByteArray.h ByteArray.cpp CostlyLoop.cpp CostlyLoop.h DosExternal.cpp DosExternal.h ERC20Conflict.cpp ERC20Conflict.h FileBackup.cpp FileBackup.h FixedFloat.cpp FixedFloat.h IntDivision.cpp IntDivision.h IrregularStyle.cpp IrregularStyle.h LockedMoney.cpp LockedMoney.h MaliciousLib.cpp MaliciousLib.h MissConstructor.cpp MissConstructor.h Overflow.cpp Overflow.h PriModifier.cpp Random.cpp Random.h RedFallback.cpp RedFallback.h Reentrant.cpp Reentrant.h PriModifier.h ReportGenerator.cpp ReportGenerator.h Selfdestruct.cpp Selfdestruct.h Send.cpp Send.h TimeDepend.cpp TimeDepend.h TxOrigin.cpp TxOrigin.h TypeInference.cpp TypeInference.h UncheckedCall.cpp UncheckedCall.h VersionNum.cpp VersionNum.h VisibilityLevel.cpp VisibilityLevel.h InsertCode.cpp InsertCode.h StyleCheck.h StyleCheck.cpp publicToExternal.cpp publicToExternal.h)